<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Man_ClInsert_activity">

<TextView
    android:id="@+id/manual_Title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/manual_Title" />

<TextView
    android:id="@+id/manual_MyFXTM_Label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/manual_MyFXTM_Label" />

<EditText
    android:id="@+id/clientID_ET"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="number" />

<Button
    android:id="@+id/submitBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/manual_submit" />

</LinearLayout>