<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:cardBackgroundColor="@android:color/background_light"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <!--android:padding="@dimen/activity_horizontal_margin">-->


            <TextView
                android:id="@+id/tvRowid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nn_sample"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvClName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray">

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="63dp"
                        android:layout_height="wrap_content"
                        android:text="Client ID:"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvMyfxtmid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myfxtmid_sample"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Type:"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvClType"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:text="@string/clType_sample"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <!--<TextView-->
                    <!--android:id="@+id/tvEmail"-->
                    <!--android:layout_width="100dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="@string/email_sample"-->
                    <!--android:textSize="12sp"-->
                    <!--tools:layout_height="wrap_content" />-->
                </LinearLayout>

            </LinearLayout>


            <!--<TextView-->
            <!--android:id="@+id/tvEventID"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="33dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="CEventID"-->
            <!--android:textSize="18sp" />-->


        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>